2001-12-10  Werner Koch  <wk@gnupg.org>

	* pubkey.c (gcry_pk_encrypt): Find the signature algorithm by name
	and not by number.
	
	* pubkey.c (gcry_pk_encrypt,gcry_pk_decrypt,gcry_pk_sign)
	(gcry_pk_verify,gcry_pk_testkey, gcry_pk_genkey)
	(gcry_pk_get_nbits): Release the arrays.  Noted by Nikos
	Mavroyanopoulos.

2001-12-06  Werner Koch  <wk@gnupg.org>

	* cipher.c (gcry_cipher_map_name): Look also for OIDs prefixed
	with "oid."  or "OID.".

2001-12-05  Werner Koch  <wk@gnupg.org>

	* pubkey.c (algo_info_table): Fixed entry for openpgp-rsa. 

2001-11-24  Werner Koch  <wk@gnupg.org>

	* pubkey.c: Added the rsaEncryption OID to the tables.
	(sexp_to_key): Add an arg to return the index of the algorithm,
	changed all callers.
	(gcry_pk_sign): Find the signature algorithm by name and not by
	number.
	(gcry_pk_get_nbits): Fixed so that we can now really pass a secret
	key to get the result.
	
	* md.c (gcry_md_map_name): Look also for OIDs prefixed with "oid."
	or "OID." so that an OID string can be used as an S-Exp token.

2001-11-20  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_map_name): Lookup by OID if the the name begins
	with a digit.
	(oid_table): New.
	
2001-11-16  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_info): New operator GCRYCTL_IS_ALGO_ENABLED.

2001-11-07  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_hash_buffer): Close the handle which was left open
	for algorithms other than rmd160.

2001-08-08  Werner Koch  <wk@gnupg.org>

	* rndw32.c (gather_random): Use toolhelp in addition to the NT
	gatherer for Windows2000.  Suggested by Sami Tolvanen.

	* random.c (read_pool): Fixed length check, this used to be one
	byte to strict.  Made an assert out of it because the caller has
	already made sure that only poolsize bytes are requested.
	Reported by Marcus Brinkmann.

2001-08-03  Werner Koch  <wk@gnupg.org>

	* cipher.c (cipher_encrypt, cipher_decrypt): Prepare to return
	errors. We have to change the interface to all ciphers to make