@@ -69,6 +69,7 @@ Michael Sobolev 	   mss@despair.transas.com
 Nicolas Graner		   Nicolas.Graner@cri.u-psud.fr
 NIIBE Yutaka		   gniibe@chroot.org
 Niklas Hernaeus
+Nikos Mavroyanopoulos      nmav@hellug.gr
 Nimrod Zimerman 	   zimerman@forfree.at
 N J Doye		   nic@niss.ac.uk
 Oliver Haakert		   haakert@hsp.de
